# mcpmoose

./: .gitignore  README.md  pyproject.toml
scripts/: make_objects.py
src/moose_mcp/: cli.py  extractor.py  syntax_srv.py
